--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.8.7",
-    "mongoose": "^3.8.15"
+    "mongoose": "^3.8.15",
+    "shortid": "^2.0.1"
   }
 }
