--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.8.1",
     "express": "^4.8.7",
     "mongoose": "^3.8.15",
+    "morgan": "^1.3.0",
     "shortid": "^2.0.1"
   },
   "devDependencies": {
