--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.8.1",
+    "cookie-parser": "^1.3.3",
     "express": "^4.8.7",
     "mongoose": "^3.8.15",
     "morgan": "^1.3.0",
