--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.8.1",
     "cookie-parser": "^1.3.3",
+    "ejs": "^1.0.0",
     "express": "^4.8.7",
     "mongoose": "^3.8.15",
     "morgan": "^1.3.0",
