--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.3.3",
     "ejs": "^1.0.0",
     "express": "^4.8.7",
+    "forever": "^0.11.1",
     "mongoose": "^3.8.15",
     "morgan": "^1.3.0",
     "shortid": "^2.0.1"
