--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "forever": "^0.11.1",
     "mongoose": "^3.8.15",
     "morgan": "^1.3.0",
+    "request": "^2.42.0",
     "shortid": "^2.0.1"
   },
   "devDependencies": {
