--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^1.0.0",
     "express": "^4.8.7",
     "forever": "^0.11.1",
+    "minimist": "^1.1.0",
     "mongoose": "^3.8.15",
     "morgan": "^1.3.0",
     "request": "^2.42.0",
